--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_main"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_main_round"
+        android:icon="@drawable/bsori"
+        android:label="DSU NFC"
+        android:roundIcon="@mipmap/ic_main"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
